# archer-pro-active

./: .coveragerc  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: claude.yml  tests.yml
docs/: ARCHITECTURE.md  TESTING.md
mind/: default-settings.json  default-settings.local.json  memory.md  system_prompt.md
scripts/: import-claude-auth.sh
scripts/claude/: reflection_cron.sh  send_to_claude.sh  session_manager.sh
scripts/telegram/: bot.py  send_message.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_telegram_flow.py
tests/integration/: __init__.py
tests/integration/telegram/: __init__.py  test_bot_integration.py  test_send_message_integration.py
tests/unit/: __init__.py
tests/unit/telegram/: __init__.py  test_bot_unit.py  test_send_message_unit.py
